WeeChat - Wee Enhanced Environment for Chat
===========================================

ChangeLog - 2007-06-06


Version 0.2.5 (under dev!):
   * added missing IRC commands (327, 378, 379) (bug #20091)
   * fixed hotlist when exiting search mode: current buffer is removed from
     hotlist
   * added "%M" for completion with nicks of current server (nicks on open
     channels) (task #6931)
   * improved key bindings: now possible to bind a key on many commands,
     separated by semicolon (task #5444)
   * improved IRC long message split: use word boundary (task #6685)
   * removed ":" for unknown IRC commands before arguments (bug #19929)
   * fixed "%C" completion: now completes with all channels of all servers
   * fixed bug with "/buffer query_name", added server and channel completion
     for /buffer command (bug #19928)
   * added cmake for weechat compile (patch #5943)
   * fixed IRC mode parsing when receiving modes with arguments (bug #19902)
   * fixed crash with IRC JOIN malformed message (bug #19891)
   * fixed bug with nick prefixes on some IRC servers (bug #19854)
   * improved setup file save: now writes temporary file, then rename it
     (task #6847)
   * fixed bug with $nick/$channel/$server variables in commands
   * forget current nick when user manually disconnects from server
   * fixed nick display in input window
   * fixed bug with erroneous nickname when connecting to server (bug #19812)
   * fixed display bugs in IRC error messages
   * added protocol priority for gnutls (patch #5915)
   * added channel admin mode '!' for some IRC servers
   * fixed bug with iso2022jp locale (bug #18719)
   * fixed string format bug when displaying string thru plugin script API
   * added /reconnect command (task #5448)
   * added "-all" option for /connect and /disconnect commands (task #6232)
   * improved nick completion: completion with last speakers first and self
     nick at the end; added option look_nick_completion_smart, enabled by